feat: restart project with working U-Net implementation
Clean slate approach with fully functional core components:
- Basic U-Net architecture implementation with configurable depth
- Medical image data loader (2D/3D, multiple formats)
- Image preprocessing pipeline (normalization, resizing)
- Dataset download script (MedMNIST, Medical Segmentation Decathlon)
- Comprehensive dataset documentation
- Working test suite (25 tests, all passing)

Changes:
- Archive outdated PROJECT_SUMMARY.md (claimed completed work that didn't exist)
- Implement src/med_seg/models/unet.py (classic U-Net with encoder/decoder)
- Implement src/med_seg/data/loader.py (NIfTI, DICOM, PNG support)
- Implement src/med_seg/data/preprocessor.py (normalization, resizing)
- Create scripts/download_data.py (automated dataset downloads)
- Create docs/DATASETS.md (comprehensive dataset guide)
- Update README.md with realistic project status
- Create working tests for models and data loading
- Fix .gitignore to only ignore data/models at root (not src/)

Tests: 25/25 passing
Status: Core infrastructure complete, ready for training implementation

Datasets available:
- MedMNIST v2 (lightweight, <1GB)
- Medical Segmentation Decathlon (2,633 volumes)
- AMOS, BraTS (documented for future use)

--- a/.gitignore
+++ b/.gitignore
@@ -41,18 +41,21 @@ uv.lock
 .ipynb_checkpoints
 *.ipynb
 
-# Data
-data/
+# Data (downloaded datasets, not source code)
+/data/
 *.nii
 *.nii.gz
 *.dcm
+*.tar
+*.tar.gz
+*.zip
 
-# Models and outputs
-models/
-checkpoints/
-logs/
-results/
-outputs/
+# Models and outputs (trained models, not source code)
+/models/
+/checkpoints/
+/logs/
+/results/
+/outputs/
 *.h5
 *.keras
 *.hdf5
