feat: implement multi-task learning with survival prediction and uncertainty quantification
Major Features:
- Multi-task U-Net architecture with shared encoder
- Survival prediction using Cox proportional hazards
- Monte Carlo Dropout for Bayesian uncertainty quantification
- Production optimization (INT8 quantization, weight pruning)
- Comprehensive evaluation framework

New Files:
- src/med_seg/models/multitask_unet.py - Multi-task architecture
- src/med_seg/training/survival_losses.py - Cox PH loss and C-index
- src/med_seg/data/survival_generator.py - Multi-task data generator
- scripts/train_multitask.py - Multi-task training pipeline
- scripts/evaluate_multitask.py - Comprehensive evaluation
- scripts/inference_with_uncertainty.py - MC Dropout demo
- scripts/optimize_model.py - Quantization and pruning
- scripts/generate_survival_data.py - Survival data generation
- scripts/monitor_training.py - Real-time training visualization
- scripts/compare_models.py - Model comparison framework

Enhanced Features:
- Focal Tversky loss for severe class imbalance
- PET/CT data pipeline with synthetic data generation
- Complete documentation suite (4 guides)

Documentation:
- QUICKSTART_MULTITASK.md - 2-hour quick start
- MULTITASK_GUIDE.md - Comprehensive guide
- PROJECT_SUMMARY.md - Technical deep dive
- NEXT_SESSION_CHECKLIST.md - Execution checklist
- Updated README.md with multi-task capabilities

Based on 2025 state-of-the-art research:
- DeepMTS (multi-task survival for PET/CT)
- AdaMSS (adaptive segmentation-to-survival)
- Focal Tversky Loss (ISBI 2019)
- MC Dropout (Gal & Ghahramani, ICML 2016)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "matplotlib>=3.7.0",
     "pyyaml>=6.0",
     "simpleitk>=2.3.0",
+    "scikit-image>=0.21.0",
     "tqdm>=4.66.0",
 ]
 keywords = ["deep-learning", "medical-imaging", "segmentation", "u-net", "tensorflow"]
