feat: implement Phase 3 anomaly detection for medical device traffic
Add autoencoder-based anomaly detection for DICOM and HL7 protocols:

- TrafficGenerator: Synthetic DICOM/HL7 traffic with realistic clinical
  workflow patterns (time-of-day variations, proper AE titles, SOP classes)

- AnomalyDetector: NumPy-based autoencoder (16->12->8->4 latent) with:
  - Gradient clipping for numerical stability
  - Early stopping with best model checkpoint
  - Feature normalization and persistence

- 10 attack types covering DICOM (unauthorized query, data exfiltration,
  malformed packets, brute force AET, ransomware) and HL7 (message
  injection, identity spoofing, protocol violation, data tampering, DoS)

- Performance: 92.5% accuracy, 0.62 F1-score, 0.86 AUC on synthetic data

- CLI tools: medsec-traffic-gen, medsec-anomaly (train/detect/evaluate)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,9 @@ medsec-nvd = "medtech_ai_security.threat_intel.nvd_scraper:main"
 medsec-cisa = "medtech_ai_security.threat_intel.cisa_scraper:main"
 medsec-enrich = "medtech_ai_security.threat_intel.claude_processor:main"
 medsec-risk = "medtech_ai_security.ml.risk_scorer:main"
+# Anomaly Detection CLI tools (Phase 3)
+medsec-traffic-gen = "medtech_ai_security.anomaly.traffic_generator:main"
+medsec-anomaly = "medtech_ai_security.anomaly.detector:main"
 
 [project.urls]
 Homepage = "https://github.com/Dashtid/medtech-ai-security"
