test: add integration tests and improve coverage to 57%
Add comprehensive integration tests for cross-phase workflows covering
all 5 security modules. Expand unit tests for threat_intel, adversarial,
and sbom_analysis modules. Configure pytest-cov with 55% coverage threshold
and mypy type checking in pyproject.toml.

Changes:
- Add tests/test_integration.py with 15 cross-phase workflow tests
- Expand test_threat_intel.py with Claude processor and CISA scraper tests
- Expand test_sbom_analysis.py with GNN model and analyzer tests
- Expand test_adversarial.py with evaluator and defense tests
- Update pyproject.toml with pytest-cov and mypy configuration
- Update pytest.ini with integration marker
- Update README.md with 149 tests and 57% coverage documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ classifiers = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.0",
+    "pytest-cov>=4.1.0",
     "black>=23.7.0",
     "ruff>=0.0.285",
     "mypy>=1.5.0",
@@ -81,3 +82,54 @@ Repository = "https://github.com/Dashtid/medtech-ai-security"
 [build-system]
 requires = ["uv_build>=0.9.0,<0.10.0"]
 build-backend = "uv_build"
+
+[tool.coverage.run]
+source = ["src/medtech_ai_security"]
+branch = true
+omit = [
+    "*/tests/*",
+    "*/__main__.py",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+]
+fail_under = 55
+show_missing = true
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = false
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+strict_equality = true
+extra_checks = true
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+disallow_untyped_defs = false
+
+[tool.ruff]
+line-length = 100
+target-version = "py310"
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
+ignore = ["E501"]
+
+[tool.black]
+line-length = 100
+target-version = ["py310", "py311", "py312"]
