--- a/pytest.ini
+++ b/pytest.ini
@@ -7,8 +7,7 @@ addopts =
     --verbose
     --strict-markers
     --tb=short
-    --disable-warnings
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
-    integration: marks tests as integration tests
+    integration: marks tests as integration tests (deselect with '-m "not integration"')
     unit: marks tests as unit tests
