--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,11 @@ notebooks = [
     "ipykernel>=6.25.0",
     "seaborn>=0.12.0",
 ]
+api = [
+    "fastapi>=0.109.0",
+    "uvicorn[standard]>=0.27.0",
+    "prometheus-client>=0.19.0",
+]
 
 [project.scripts]
 medseg-train = "med_seg.scripts.train:main"
@@ -76,6 +81,15 @@ medsec-adversarial = "medtech_ai_security.adversarial.evaluator:main"
 medsec-sbom = "medtech_ai_security.sbom_analysis.analyzer:main"
 # Integration CLI tools
 medsec-defectdojo = "medtech_ai_security.integration.defectdojo:main"
+# API server
+medsec-api = "medtech_ai_security.api.main:main"
+# Dashboard
+medsec-dashboard = "medtech_ai_security.dashboard.server:main"
+# Live Traffic Capture
+medsec-capture = "medtech_ai_security.capture.traffic_analyzer:main"
+# Federated Learning
+medsec-fed-server = "medtech_ai_security.federated.server:main"
+medsec-fed-client = "medtech_ai_security.federated.client:main"
 
 [project.urls]
 Homepage = "https://github.com/Dashtid/medtech-ai-security"
