--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,9 +49,13 @@ classifiers = [
 dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
+    "pytest-asyncio>=0.23.0",
     "black>=23.7.0",
     "ruff>=0.0.285",
     "mypy>=1.5.0",
+    "types-requests>=2.31.0",
+    "types-beautifulsoup4>=4.12.0",
+    "httpx>=0.27.0",
 ]
 notebooks = [
     "jupyter>=1.0.0",
