--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+asyncio_mode = auto
 addopts =
     --verbose
     --strict-markers
@@ -11,3 +12,4 @@ markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests (deselect with '-m "not integration"')
     unit: marks tests as unit tests
+    asyncio: marks tests as async tests
