--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    # Core ML/AI (from biomedical foundation)
+    # Core ML/AI
     "tensorflow>=2.13.0",
     "numpy>=1.24.0",
     "scipy>=1.11.0",
@@ -69,9 +69,6 @@ api = [
 ]
 
 [project.scripts]
-medseg-train = "med_seg.scripts.train:main"
-medseg-evaluate = "med_seg.scripts.evaluate:main"
-medseg-inference = "med_seg.scripts.inference:main"
 # Security CLI tools
 medsec-nvd = "medtech_ai_security.threat_intel.nvd_scraper:main"
 medsec-cisa = "medtech_ai_security.threat_intel.cisa_scraper:main"
