--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,15 +34,29 @@ keywords = [
     "adversarial-ml",
     "deep-learning",
     "medical-imaging",
+    "sbom",
+    "supply-chain-security",
+    "fda-compliance",
+    "anomaly-detection",
+    "graph-neural-network",
+    "healthcare-security",
+    "dicom",
+    "hl7",
+    "federated-learning",
 ]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Science/Research",
+    "Intended Audience :: Healthcare Industry",
     "Topic :: Scientific/Engineering :: Medical Science Apps.",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Security",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Typing :: Typed",
 ]
 
 [project.optional-dependencies]
@@ -56,6 +70,8 @@ dev = [
     "types-requests>=2.31.0",
     "types-beautifulsoup4>=4.12.0",
     "httpx>=0.27.0",
+    "bandit>=1.7.0",
+    "semgrep>=1.50.0",
 ]
 notebooks = [
     "jupyter>=1.0.0",
