chore: suppress third-party library warnings in pytest
Add filterwarnings configuration to pytest.ini to suppress:
- Keras/NumPy 2.0 __array__ copy keyword deprecation warnings
- Keras optimizer loading warnings during model save/load tests

These are known compatibility issues in third-party libraries
(Keras/TensorFlow with NumPy 2.0) and not issues in our codebase.

All 672 tests now pass with zero warnings.

--- a/pytest.ini
+++ b/pytest.ini
@@ -13,3 +13,10 @@ markers =
     integration: marks tests as integration tests (deselect with '-m "not integration"')
     unit: marks tests as unit tests
     asyncio: marks tests as async tests
+filterwarnings =
+    # Ignore Keras/NumPy 2.0 compatibility warnings (third-party library issue)
+    ignore:__array__ implementation doesn't accept a copy keyword:DeprecationWarning
+    # Ignore Keras optimizer loading warnings during model save/load tests
+    ignore:Skipping variable loading for optimizer:UserWarning
+    # Ignore TensorFlow oneDNN custom operations info
+    ignore:oneDNN custom operations are on:UserWarning
