feat: add documentation site, DevOps automation, benchmarks, and advanced ML features
Phase 1 - Documentation Site:
- Add MkDocs Material configuration with GitHub Pages deployment
- Create comprehensive docs covering API, modules, deployment guides
- Add docs workflow for automated deployment on push to main

Phase 2 - DevOps Automation:
- Configure Release Please for automated semantic versioning
- Update release workflow with GHCR Docker publishing
- Add release-please-config.json and manifest

Phase 3 - Code Quality:
- Add pytest-benchmark for performance testing
- Create benchmark test suites for anomaly, SBOM, and adversarial modules
- Add profiling script with HTML report generation
- Add memory-profiler to dev dependencies

Phase 4 - Feature Enhancements:
- Implement DeepFool, Square Attack, and AutoAttack methods
- Add Randomized Smoothing and Gradient Regularization defenses
- Add Input Transformation defense method
- Create GradientRegularizedTrainer for training-time defense
- Add benchmark and model comparison API endpoints
- Implement WebSocket endpoint for real-time anomaly streaming

All tests pass (666 passed, 6 skipped).

--- a/pytest.ini
+++ b/pytest.ini
@@ -13,6 +13,7 @@ markers =
     integration: marks tests as integration tests (deselect with '-m "not integration"')
     unit: marks tests as unit tests
     asyncio: marks tests as async tests
+    benchmark: marks tests as benchmark tests (run with '--benchmark-only')
 filterwarnings =
     # Ignore Keras/NumPy 2.0 compatibility warnings (third-party library issue)
     ignore:__array__ implementation doesn't accept a copy keyword:DeprecationWarning
