--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "pytest-asyncio>=0.23.0",
+    "pytest-benchmark>=5.0.0",
     "black>=23.7.0",
     "ruff>=0.0.285",
     "mypy>=1.5.0",
@@ -72,6 +73,7 @@ dev = [
     "httpx>=0.27.0",
     "bandit>=1.7.0",
     "semgrep>=1.50.0",
+    "memory-profiler>=0.61.0",
 ]
 notebooks = [
     "jupyter>=1.0.0",
