--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,12 @@ api = [
     "fastapi>=0.109.0",
     "uvicorn[standard]>=0.27.0",
     "prometheus-client>=0.19.0",
+    # Authentication
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
+    "python-multipart>=0.0.6",
+    # Rate limiting
+    "slowapi>=0.1.9",
 ]
 
 [project.scripts]
