feat: add data poisoning defense, YAML config system, and enhanced CLI
New features:
- Data poisoning defense module with multiple strategies (statistical,
  isolation forest, LOF, RONI, ensemble validation)
- YAML configuration system with Pydantic validation for experiments,
  attacks, and defenses
- Rich-enhanced CLI with progress bars, colored output, and interactive
  wizards for experiment configuration
- Configuration templates (attack.yaml, defense.yaml, experiment.yaml)

Changes:
- Updated pyproject.toml with new dependencies (pydantic, typer, rich)
- Added CLI entry points: medtech-ai-security, medsec
- Added pytest markers for test organization
- Updated README with new features and usage documentation

Tests:
- Added 118 new tests for data poisoning, config, and CLI modules
- All 911 tests pass (excluding benchmark tests requiring PyTorch)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,16 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "pandas>=2.0.0",
     "joblib>=1.3.0",
+    # Configuration & Validation
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
+    "email-validator>=2.0.0",
+    # CLI Enhancement
+    "typer>=0.9.0",
+    "rich>=13.0.0",
+    # Authentication
+    "bcrypt>=4.0.0",
+    "python-jose[cryptography]>=3.3.0",
 ]
 keywords = [
     "medical-device",
@@ -93,6 +103,9 @@ api = [
 ]
 
 [project.scripts]
+# Main CLI (Rich enhanced)
+medtech-ai-security = "medtech_ai_security.cli:main"
+medsec = "medtech_ai_security.cli:main"
 # Security CLI tools
 medsec-nvd = "medtech_ai_security.threat_intel.nvd_scraper:main"
 medsec-cisa = "medtech_ai_security.threat_intel.cisa_scraper:main"
@@ -179,3 +192,23 @@ ignore = ["E501"]
 [tool.black]
 line-length = 100
 target-version = ["py310", "py311", "py312"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_functions = ["test_*"]
+addopts = "-v --tb=short"
+markers = [
+    "unit: Unit tests (fast, isolated)",
+    "integration: Integration tests (may require external services)",
+    "security: Security-related tests (auth, RBAC, rate limiting)",
+    "slow: Long-running tests (model training, large datasets)",
+    "ml: Machine learning tests (requires numpy/sklearn)",
+    "api: API endpoint tests (requires fastapi)",
+    "drift: Drift detection tests",
+    "poisoning: Data poisoning defense tests",
+]
+filterwarnings = [
+    "ignore::DeprecationWarning",
+    "ignore::PendingDeprecationWarning",
+]
