fix: add missing test dependencies to dev extras
- Add hypothesis, faker, requests-mock for test imports
- Add fastapi, uvicorn, python-multipart, slowapi for API tests
- Add pytest-mock, pytest-timeout, pytest-xdist, pytest-rerunfailures
- Fix tests.yml references from med_seg to medtech_ai_security
- Remove redundant uv add pytest-cov (already in dev extras)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,7 +46,7 @@ jobs:
 
     - name: Type check with mypy
       run: |
-        uv run mypy src/med_seg --ignore-missing-imports
+        uv run mypy src/medtech_ai_security --ignore-missing-imports
       continue-on-error: true  # Don't fail on type errors initially
 
   test-coverage:
@@ -67,11 +67,10 @@ jobs:
     - name: Install dependencies
       run: |
         uv sync --extra dev
-        uv add pytest-cov
 
     - name: Run tests with coverage
       run: |
-        uv run pytest tests/ --cov=med_seg --cov-report=xml --cov-report=html
+        uv run pytest tests/ --cov=medtech_ai_security --cov-report=xml --cov-report=html
 
     - name: Upload coverage reports
       uses: codecov/codecov-action@v3
