--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,10 @@ dev = [
     "pytest-cov>=4.1.0",
     "pytest-asyncio>=0.23.0",
     "pytest-benchmark>=5.0.0",
+    "pytest-mock>=3.12.0",
+    "pytest-timeout>=2.4.0",
+    "pytest-xdist>=3.5.0",
+    "pytest-rerunfailures>=14.0",
     "black>=23.7.0",
     "ruff>=0.0.285",
     "mypy>=1.5.0",
@@ -84,6 +88,15 @@ dev = [
     "bandit>=1.7.0",
     "semgrep>=1.50.0",
     "memory-profiler>=0.61.0",
+    # Test dependencies
+    "hypothesis>=6.92.0",
+    "faker>=22.0.0",
+    "requests-mock>=1.11.0",
+    # API testing (needed for test_api.py, test_auth.py, test_dashboard.py)
+    "fastapi>=0.109.0",
+    "uvicorn[standard]>=0.27.0",
+    "python-multipart>=0.0.6",
+    "slowapi>=0.1.9",
 ]
 notebooks = [
     "jupyter>=1.0.0",
