--- a/pyproject.toml
+++ b/pyproject.toml
@@ -200,7 +200,7 @@ target-version = "py310"
 
 [tool.ruff.lint]
 select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
-ignore = ["E501"]
+ignore = ["E501", "B007", "B008", "B904", "B905", "N803", "N806", "N817"]
 
 [tool.black]
 line-length = 100
