--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,11 +122,12 @@ jobs:
       - name: Run Bandit (security linting)
         run: |
           uv pip install bandit
-          uv run bandit -r src/ -ll -ii -f sarif -o bandit-results.sarif || echo '{"version":"2.1.0","runs":[]}' > bandit-results.sarif
+          uv run bandit -r src/ -ll -ii -f sarif -o bandit-results.sarif || true
 
       - name: Upload Bandit SARIF results
         uses: github/codeql-action/upload-sarif@v3
         if: always() && hashFiles('bandit-results.sarif') != ''
+        continue-on-error: true
         with:
           sarif_file: bandit-results.sarif
           category: bandit
