--- a/k8s/deployment-threat-intel.yaml
+++ b/k8s/deployment-threat-intel.yaml
@@ -125,6 +125,12 @@ spec:
                 limits:
                   cpu: "500m"
                   memory: "512Mi"
+              securityContext:
+                allowPrivilegeEscalation: false
+                readOnlyRootFilesystem: true
+                capabilities:
+                  drop:
+                    - ALL
               volumeMounts:
                 - name: data-volume
                   mountPath: /app/data
@@ -175,6 +181,12 @@ spec:
                 limits:
                   cpu: "500m"
                   memory: "512Mi"
+              securityContext:
+                allowPrivilegeEscalation: false
+                readOnlyRootFilesystem: true
+                capabilities:
+                  drop:
+                    - ALL
               volumeMounts:
                 - name: data-volume
                   mountPath: /app/data
