ci: fix Docker and Release workflow failures
- Docker: Only build/push on version tags (not every main push)
- Release: Add continue-on-error for Release Please step

This prevents workflow failures when:
- No release is needed (Release Please)
- GHCR push permissions aren't configured (Docker)

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,11 +5,10 @@ name: Docker
 
 on:
   push:
-    branches: [main]
-    tags: ["v*"]
+    tags: ["v*"]  # Only build and push on version tags
   pull_request:
-    branches: [main]
-  workflow_dispatch:
+    branches: [main]  # Build (no push) on PRs for validation
+  workflow_dispatch:  # Manual trigger
 
 env:
   REGISTRY: ghcr.io
