--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Release Please
         id: release
         uses: googleapis/release-please-action@v4
+        continue-on-error: true  # Don't fail if no release needed or permissions limited
         with:
           release-type: python
           token: ${{ secrets.GITHUB_TOKEN }}
