ci: build Docker on main without push for validation
Add branches: [main] back to Docker workflow so builds run on every
push to main. This validates Docker builds work without actually
pushing to GHCR. Pushes only happen on version tags (v*).

Benefits:
- Catch Dockerfile issues early on main branch
- No wasted registry storage from dev builds
- Multi-platform builds (amd64/arm64) validated on every push

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,8 @@ name: Docker
 
 on:
   push:
-    tags: ["v*"]  # Only build and push on version tags
+    branches: [main]  # Build (no push) on main for validation
+    tags: ["v*"]  # Build and push on version tags
   pull_request:
     branches: [main]  # Build (no push) on PRs for validation
   workflow_dispatch:  # Manual trigger
